--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -2,7 +2,7 @@
 
     background-color:cornsilk;
     border: 2.5px solid black;
-    border-radius: 5px;
+    border-radius: 10px;
     display: inline-block;
     text-align: center;
     justify-content: center;
@@ -17,6 +17,9 @@
     border: 1px solid black;
     margin: 10px;
     width: 70%;
+    height: 40px;
+    font-size: 30px;
+    padding: 5px;
 }
 
 .btn{
@@ -26,6 +29,7 @@
     border: 1px solid black;
     border-radius:5px;
     font-weight: 900;
+    height: 40px;
     width: 60px;
     display: inline-block;
     text-align: center;
